# jarvis-desktop-assistant

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  run.py  worklog-21-06-2026.md
.agents/skills/detailed_production_ship/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  apis-and-dependencies.md  architecture.md  features.md  issues-and-fixes.md  roadmap.md
scripts/: bootstrap.ps1  check.ps1  jarvis_launcher.py
src/desktop_voice_assistant/: __init__.py  actions.py  app.py  app_helpers.py  app_memory.py  archive.py  assistant.py  capabilities.py  config.py  embeddings.py  filesystem_actions.py  history.py  hud.py  intent_router.py  llm.py  logging_utils.py  model_manager.py  models.py  productivity.py  research.py  response_style.py  secret_store.py  session.py  settings_ui.py  speech.py  state_manager.py  tray.py  ui_control.py  weather.py
tests/: test_actions.py  test_app.py  test_archive.py  test_assistant.py  test_config.py  test_history.py  test_intent_router.py  test_llm.py  test_memory.py  test_model_manager.py  test_productivity.py  test_research.py  test_speech_capture.py  test_state_manager.py  test_tray_integration.py  test_weather.py
